--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "expenses-note-jquery": "file:",
     "express": "^4.21.1",
     "sqlite3": "^5.1.7"
   }
